--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-@import"assets/header.scss";
-@import"assets/color.scss";
+@import"../assets/color.scss";
+@import"../assets/header.scss";
 
 
 
@@ -14,6 +14,11 @@ body{
     font-style: normal;
     overflow-x: hidden;
     position: relative;
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 a{
