--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-@import"../assets/color.scss";
-@import"../assets/header.scss";
+@import"../assets/color";
+@import"../assets/heade";
 
 
 
