--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -79,7 +79,7 @@ header {
         display: none;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
         position: fixed;
         height: 100vh;
         right: 0;
@@ -88,11 +88,11 @@ header {
         .logoMobil {
           display:block;
           text-align: center;
-          margin: 0 0 50px 0;
+          margin: 70px 0 50px 0;
           width: 100%;
           position: relative;
           img {
-            width: 80px;
+            width: 100px;
           }
         }
 
