--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -49,7 +49,7 @@ header {
             bottom: 0;
             left: 0;
             border-radius: 10px;
-            background-color: $primary-light;
+            background-color:$secondary-color;
             position: absolute;
           }
         }
@@ -61,41 +61,99 @@ header {
   }
 
   .headerInfo {
-    display: flex;
-    flex-direction: row;
-    height: 120vh;
-    // background-color: $primary-color;
-    padding-top: 120px;
+    padding-top: 90px;
+    background-color: $primary-color;
+
     .header {
       display: flex;
       flex-direction: row;
-      height: 120vh;
-      // background-color: $primary-color;
-      padding-top: 120px;
-      .col1,
-      .col2 {
+      height: 110vh;
+      padding-top: 90px;
+      .col1,.col2 {
+        // flex: 1;
       }
       .col1 {
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 20px;
         .titleHeader {
           color: $white;
-          font-size: 3rem;
+          font-size: 2.5rem;
           font-weight: bold;
+          text-transform: uppercase;
         }
         .subtitleHeader {
-          font-size: 22px;
+          font-size: 1rem;
           font-weight: 400;
-          color: $gray-dark;
+          color: #ffffffb4;
         }
 
         .contactHeader {
           display: flex;
           flex-direction: row;
+          align-items: center;
           gap: 50px;
+
+          .contact{
+
+            button{
+              // background-color: $primary-light;
+              background-color: transparent;
+              border: 2px solid $primary-light;
+              width: 150px;
+              height: 45px;
+              border-radius: 10px;
+              font-size: 1rem;
+              font-weight: 100;
+              color: $white;
+              letter-spacing: 2px;
+              transition:ease-in 0.5s;
+            }
+            button:hover{
+              border: 2px solid $secondary-color;
+              box-sizing: border-box;
+            }
+          }
+
+          .videoheader{
+
+            .modal-video{
+              span{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 10px;
+                color:$secondary-color;
+                cursor: pointer;
+                i{
+                  font-size: 2.2rem;
+                  color: $secondary-color;
+                }
+              }
+
+              .video{
+                background-color:$primary-color;
+                position: fixed;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                z-index: 999;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              }
+
+            }
+           
+          }
         }
       }
       .col2 {
-        flex: 1;
+        flex: 0.7;
       }
     }
   }
