--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -3,6 +3,7 @@ header {
     position: fixed;
     width: 100%;
     background-color: $primary-color;
+    z-index: 98;
   }
   .btnHamburguer {
     display: none;
@@ -49,7 +50,7 @@ header {
             bottom: 0;
             left: 0;
             border-radius: 10px;
-            background-color:$secondary-color;
+            background-color: $secondary-color;
             position: absolute;
           }
         }
@@ -61,17 +62,17 @@ header {
   }
 
   .headerInfo {
-    padding-top: 90px;
+    padding-top: 70px;
     background-color: $primary-color;
 
     .header {
       display: flex;
       flex-direction: row;
+      align-items: flex-start;
+      justify-content: center;
       height: 110vh;
       padding-top: 90px;
-      .col1,.col2 {
-        // flex: 1;
-      }
+      
       .col1 {
         flex: 1;
         display: flex;
@@ -80,7 +81,7 @@ header {
         gap: 20px;
         .titleHeader {
           color: $white;
-          font-size: 2.5rem;
+          font-size: 2.2rem;
           font-weight: bold;
           text-transform: uppercase;
         }
@@ -88,6 +89,7 @@ header {
           font-size: 1rem;
           font-weight: 400;
           color: #ffffffb4;
+          margin-bottom: 15px;
         }
 
         .contactHeader {
@@ -95,10 +97,8 @@ header {
           flex-direction: row;
           align-items: center;
           gap: 50px;
-
-          .contact{
-
-            button{
+          .contact {
+            button {
               // background-color: $primary-light;
               background-color: transparent;
               border: 2px solid $primary-light;
@@ -109,46 +109,57 @@ header {
               font-weight: 100;
               color: $white;
               letter-spacing: 2px;
-              transition:ease-in 0.5s;
+              transition: ease-in 0.5s;
             }
-            button:hover{
+            button:hover {
               border: 2px solid $secondary-color;
               box-sizing: border-box;
             }
           }
 
-          .videoheader{
-
-            .modal-video{
-              span{
+          .videoheader {
+            .modal-video {
+              span {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 gap: 10px;
-                color:$secondary-color;
+                color: $secondary-color;
                 cursor: pointer;
-                i{
+                i {
                   font-size: 2.2rem;
                   color: $secondary-color;
                 }
               }
 
-              .video{
-                background-color:$primary-color;
-                position: fixed;
+              .video {
+                background-color: $primary-color;
+                position:fixed;
                 top: 0px;
                 left: 0px;
                 width: 100%;
                 height: 100%;
-                z-index: 999;
-
-                display: flex;
+                transition: ease 5s;
+                display: none;
                 align-items: center;
                 justify-content: center;
-              }
+                z-index: 99;
+                .fa-circle-xmark {
+                  display: flex;
+                  position: absolute;
+                  top: 30px;
+                  right: 7%;
+                  font-size: 30px;
+                  cursor: pointer;
+                  color: $primary-light;
 
+                }
+                
+              }
+              .close{
+                display: flex;
+              }
             }
-           
           }
         }
       }
@@ -158,6 +169,8 @@ header {
     }
   }
 }
+
+
 
 @media (max-width: 768px) {
   header {
