--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -70,7 +70,7 @@ header {
       flex-direction: row;
       align-items: flex-start;
       justify-content: center;
-      height: 110vh;
+      height: 100vh;
       padding-top: 90px;
       
       .col1 {
@@ -165,6 +165,38 @@ header {
       }
       .col2 {
         flex: 0.7;
+      }
+    }
+
+    .cardsHeaderContainer{
+      position: absolute;
+      top: 82vh;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 40px;
+      .card-item{
+        flex: 1;
+        background-color: $primary-light;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+        padding: 50px 30px;
+        border-radius: 15px;
+        box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+        div{
+
+          img{
+            width: 100px;
+          }
+
+          h3{
+            color:$primary-color;
+          }
+        }
       }
     }
   }
