--- a/scss/style.css
+++ b/scss/style.css
@@ -121,31 +121,6 @@ header .headerInfo .header .col1 .contactHeader .videoheader .modal-video span i
   font-size: 2.2rem;
   color: #00ADEF;
 }
-header .headerInfo .header .col1 .contactHeader .videoheader .modal-video .video {
-  background-color: #008374;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  transition: ease 5s;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 99;
-}
-header .headerInfo .header .col1 .contactHeader .videoheader .modal-video .video .fa-circle-xmark {
-  display: flex;
-  position: absolute;
-  top: 30px;
-  right: 7%;
-  font-size: 30px;
-  cursor: pointer;
-  color: #36CDBC;
-}
-header .headerInfo .header .col1 .contactHeader .videoheader .modal-video .close {
-  display: flex;
-}
 header .headerInfo .header .col2 {
   flex: 0.7;
 }
@@ -175,6 +150,31 @@ header .headerInfo .cardsHeaderContainer .card-item div img {
 }
 header .headerInfo .cardsHeaderContainer .card-item div h3 {
   color: #008374;
+}
+header .video {
+  background-color: #008374;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transition: ease 5s;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+header .video .fa-circle-xmark {
+  display: flex;
+  position: absolute;
+  top: 30px;
+  right: 7%;
+  font-size: 30px;
+  cursor: pointer;
+  color: #36CDBC;
+}
+header .close {
+  display: flex;
 }
 
 @media (max-width: 768px) {
@@ -244,6 +244,10 @@ header .headerInfo .cardsHeaderContainer .card-item div h3 {
     transform: translateY(-20px);
   }
 }
+main {
+  padding-top: 200px;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-style: normal;
