--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -72,7 +72,7 @@ header {
       justify-content: center;
       height: 100vh;
       padding-top: 90px;
-      
+
       .col1 {
         flex: 1;
         display: flex;
@@ -130,7 +130,7 @@ header {
                   font-size: 2.2rem;
                   color: $secondary-color;
                 }
-              }        
+              }
             }
           }
         }
@@ -140,33 +140,33 @@ header {
       }
     }
 
-    .cardsHeaderContainer{
+    .cardsHeaderContainer {
       position: absolute;
       top: 82vh;
       width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      gap: 40px;
-      .card-item{
+      flex-wrap: wrap;
+      gap: 17px;
+      .card-item {
         flex: 1;
         background-color: $primary-light;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 15px;
-        padding: 50px 30px;
+        gap: 10px;
+        padding: 40px 10px;
         border-radius: 15px;
         box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-        div{
-
-          img{
-            width: 100px;
+        div {
+          img {
+            width: 80px;
           }
 
-          h3{
-            color:$primary-color;
+          h3 {
+            color: $primary-color;
           }
         }
       }
@@ -174,7 +174,7 @@ header {
   }
   .video {
     background-color: $primary-color;
-    position:fixed;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -192,18 +192,12 @@ header {
       font-size: 30px;
       cursor: pointer;
       color: $primary-light;
-  
     }
-    
   }
-  .close{
+  .close {
     display: flex;
   }
 }
-
-
-
-
 
 @media (max-width: 768px) {
   header {
@@ -230,16 +224,18 @@ header {
 
     .ajustHeader {
       .menuNav {
-        background-color: $primary-color;
-        width: 300px;
+        background-color: $primary-light;
+        width: 80%;
         display: none;
         flex-direction: column;
         align-items: center;
         // justify-content: center;
         position: fixed;
-        height: 100vh;
-        right: 0;
-        top: 0;
+        height: 80vh;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 50%;
+        border-radius: 20px;
         transition: all 0.5s linear;
         .logoMobil {
           display: block;
@@ -279,7 +275,64 @@ header {
         // visibility: visible;
       }
     }
+
+    .headerInfo{
+
+      .header{
+
+        padding-top: 50px;
+        flex-direction: column-reverse;
+        .col1{
+          gap: 10px;
+          .titleHeader {
+            color: $white;
+            font-size: 1.5rem;
+            margin-top: 40px;
+          }
+          .subtitleHeader {
+            font-size: 1rem;
+            font-weight: 400;
+            color: #ffffffb4;
+            margin-bottom: 15px;
+          }
+        }
+
+        .col2{
+          flex: 0.4;
+
+          .imgHeader{
+            display: flex;
+            justify-content: flex-start;
+            img{
+              width: 80%;
+            }
+          }
+        }
+      }
+
+      .cardsHeaderContainer{
+        top: 84vh;
+        // flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 7px;
+        .card-item{
+          padding: 35px 5px;
+
+          div{
+            
+            h3{
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
   }
+}
+
+@media (max-width: 576px){
+  
 }
 
 @keyframes animationBtbMenu {
