--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -298,7 +298,6 @@ header {
         }
 
         .col2{
-          flex: 0.4;
 
           .imgHeader{
             display: flex;
@@ -315,10 +314,11 @@ header {
         // flex-direction: column;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
+
         gap: 7px;
         .card-item{
           padding: 35px 5px;
-
           div{
             
             h3{
@@ -332,7 +332,49 @@ header {
 }
 
 @media (max-width: 576px){
-  
+  header {
+    .headerInfo{
+
+      .header{
+        height: 230vh;
+        padding-top: 50px;
+        flex-direction: column-reverse;
+        .col1{
+          gap: 10px;
+          .titleHeader {
+            color: $white;
+            font-size: 1.5rem;
+            margin-top: 40px;
+          }
+          .subtitleHeader {
+            font-size: 1rem;
+            font-weight: 400;
+            color: #ffffffb4;
+            margin-bottom: 15px;
+          }
+        }
+        .col2{
+          flex: 0.1;
+
+          .imgHeader{
+
+            img{
+              width: 100%;
+            }
+          }
+        }
+      }
+
+      .cardsHeaderContainer{
+        top: 84vh;
+        flex-direction: column;
+        gap: 7px;
+        .card-item{
+          width: 77%;
+        }
+      }
+    }
+  }
 }
 
 @keyframes animationBtbMenu {
