--- a/scss/style.css
+++ b/scss/style.css
@@ -210,6 +210,7 @@ header .close {
     top: 50%;
     border-radius: 20px;
     transition: all 0.5s linear;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   }
   header .ajustHeader .menuNav .logoMobil {
     display: block;
