--- a/scss/style.css
+++ b/scss/style.css
@@ -142,12 +142,17 @@ header .headerInfo .cardsHeaderContainer .card-item {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  padding: 40px 10px;
+  padding: 25px 10px;
   border-radius: 15px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
+header .headerInfo .cardsHeaderContainer .card-item div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 header .headerInfo .cardsHeaderContainer .card-item div img {
-  width: 80px;
+  width: 150px;
 }
 header .headerInfo .cardsHeaderContainer .card-item div h3 {
   color: #008374;
@@ -322,6 +327,54 @@ header .close {
 }
 main {
   padding-top: 200px;
+}
+main .about .titleSection {
+  width: 100%;
+  text-align: start;
+  padding-bottom: 80px;
+}
+main .about .titleSection h3 {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  position: relative;
+  color: #00ADEF;
+}
+main .about .titleSection h3::before {
+  content: " ";
+  position: absolute;
+  bottom: 0;
+  width: 40px;
+  height: 4px;
+  border-radius: 10px;
+  background-color: #008374;
+}
+main .about .colsConatinerSectionOn {
+  display: flex;
+  flex-direction: row;
+}
+main .about .colsConatinerSectionOn .colSection-on {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+main .about .colsConatinerSectionOn .colSection-on .titleLocation p {
+  font-weight: 400;
+  font-size: 1.1rem;
+}
+main .about .colsConatinerSectionOn .colSection-on .titleLocation p strong {
+  font-weight: 600;
+  color: #00ADEF;
+}
+main .about .colsConatinerSectionOn .colSection-on .textLocation {
+  width: 100%;
+}
+main .about .colsConatinerSectionOn .colSection-on .textLocation p {
+  font-size: 0.9rem;
+}
+main .about .colsConatinerSectionOn .colSection-two {
+  flex: 1;
 }
 
 body {
