--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -83,6 +83,7 @@ main {
               .slide {
                 width: 25%;
                 position: relative;
+                transition: 2s;
                   img {
                     width: 800px;
                 }
