--- a/scss/style.css
+++ b/scss/style.css
@@ -402,6 +402,7 @@ main .about .colsConatinerSectionOn .colSection-on .slider .slides #radio4:check
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .slide {
   width: 25%;
   position: relative;
+  transition: 2s;
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .slide img {
   width: 800px;
