--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -320,7 +320,7 @@ header {
         // flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
 
         gap: 7px;
         .card-item{
