--- a/scss/style.css
+++ b/scss/style.css
@@ -93,22 +93,6 @@ header .headerInfo .header .col1 .contactHeader {
   align-items: center;
   gap: 50px;
 }
-header .headerInfo .header .col1 .contactHeader .contact button {
-  background-color: transparent;
-  border: 2px solid #36CDBC;
-  width: 150px;
-  height: 45px;
-  border-radius: 10px;
-  font-size: 1rem;
-  font-weight: 100;
-  color: #fff;
-  letter-spacing: 2px;
-  transition: ease-in 0.5s;
-}
-header .headerInfo .header .col1 .contactHeader .contact button:hover {
-  border: 2px solid #00ADEF;
-  box-sizing: border-box;
-}
 header .headerInfo .header .col1 .contactHeader .videoheader .modal-video span {
   display: flex;
   flex-direction: row;
@@ -180,6 +164,23 @@ header .video .fa-circle-xmark {
 }
 header .close {
   display: flex;
+}
+
+.contact button {
+  background-color: transparent;
+  border: 2px solid #36CDBC;
+  width: 150px;
+  height: 45px;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: 100;
+  color: #fff;
+  letter-spacing: 2px;
+  transition: ease-in 0.5s;
+}
+.contact button:hover {
+  border: 2px solid #00ADEF;
+  box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
@@ -352,6 +353,7 @@ main .about .titleSection h3::before {
 main .about .colsConatinerSectionOn {
   display: flex;
   flex-direction: row;
+  gap: 80px;
 }
 main .about .colsConatinerSectionOn .colSection-on {
   flex: 1;
@@ -360,18 +362,18 @@ main .about .colsConatinerSectionOn .colSection-on {
   gap: 40px;
 }
 main .about .colsConatinerSectionOn .colSection-on .titleLocation p {
-  font-weight: 300;
-  font-size: 1.1rem;
+  font-weight: 400;
+  font-size: 1.3rem;
 }
 main .about .colsConatinerSectionOn .colSection-on .titleLocation p strong {
   font-weight: 600;
-  color: #00ADEF;
+  color: #008374;
 }
 main .about .colsConatinerSectionOn .colSection-on .textLocation {
   width: 100%;
 }
 main .about .colsConatinerSectionOn .colSection-on .textLocation p {
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 300;
   text-indent: 30px;
 }
@@ -380,14 +382,13 @@ main .about .colsConatinerSectionOn .colSection-on .textLocation p strong {
 }
 main .about .colsConatinerSectionOn .colSection-on .slider {
   max-width: 600px;
-  height: 400px;
   overflow: hidden;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  position: relative;
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides {
   width: 400%;
-  height: 400px;
   display: flex;
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides input {
@@ -407,11 +408,10 @@ main .about .colsConatinerSectionOn .colSection-on .slider .slides #radio4:check
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .slide {
   width: 25%;
-  position: relative;
-  transition: 2s;
+  transition: 1s;
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .slide img {
-  width: 800px;
+  width: 100%;
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .navigation-auto div {
   border: 2px solid #00ADEF;
@@ -422,10 +422,11 @@ main .about .colsConatinerSectionOn .colSection-on .slider .slides .navigation-a
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .navigation-auto {
   position: absolute;
-  width: 600px;
+  width: 100%;
   margin-top: 360px;
   display: flex;
   justify-content: center;
+  bottom: 26.5px;
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .slides .navigation-auto div:not(:last-child) {
   margin-right: 40px;
@@ -444,7 +445,7 @@ main .about .colsConatinerSectionOn .colSection-on .slider .slides #radio4:check
 }
 main .about .colsConatinerSectionOn .colSection-on .slider .mnual-navigation {
   position: absolute;
-  width: 600px;
+  width: 100%;
   margin-top: -40px;
   display: flex;
   justify-content: center;
@@ -464,8 +465,93 @@ main .about .colsConatinerSectionOn .colSection-on .slider .mnual-navigation .ma
 }
 main .about .colsConatinerSectionOn .colSection-two {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+main .about .colsConatinerSectionOn .colSection-two .title-two h3 {
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+main .about .colsConatinerSectionOn .colSection-two .title-two h3 strong {
+  color: #008374;
+}
+main .about .colsConatinerSectionOn .colSection-two .listService ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+main .about .colsConatinerSectionOn .colSection-two .listService ul li i {
+  padding-right: 10px;
+  color: #00ADEF;
+  font-size: 20px;
+}
+main .about .colsConatinerSectionOn .colSection-two .listService ul li strong {
+  color: #008374;
+}
+main .about .colsConatinerSectionOn .colSection-two .btnHistory {
+  color: red;
+  width: 250px;
 }
 
+@media (max-width: 768px) {
+  main .about .colsConatinerSectionOn .colSection-on .titleLocation p {
+    font-size: 16px;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .title-two h3 {
+    font-size: 1rem;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .title-two h3 strong {
+    color: #008374;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .listService ul {
+    gap: 8px;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .listService ul li {
+    font-size: 0.9rem;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .listService ul li strong {
+    color: #008374;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .btnHistory {
+    color: red;
+    width: 250px;
+  }
+}
+@media (max-width: 576px) {
+  main {
+    padding-top: 120px;
+  }
+  main .about .colsConatinerSectionOn {
+    flex-direction: column;
+  }
+  main .about .colsConatinerSectionOn .colSection-on .titleLocation p {
+    font-size: 16px;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .title-two h3 {
+    font-size: 1rem;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .title-two h3 strong {
+    color: #008374;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .listService ul {
+    gap: 8px;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .listService ul li {
+    font-size: 0.9rem;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .listService ul li strong {
+    color: #008374;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .btnHistory {
+    color: red;
+    width: 250px;
+  }
+  main .about .colsConatinerSectionOn .colSection-two .btnHistory {
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
+}
 body {
   font-family: "Poppins", sans-serif;
   font-style: normal;
