--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden
 }
 
 @import"../assets/color";
@@ -13,8 +14,6 @@
 body{
     font-family: "Poppins", sans-serif;
     font-style: normal;
-    overflow-x: hidden;
-    position: relative;
     box-sizing: border-box;
 }
 
